--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,15 @@
 = kafka-streams-docker
+:library: Asciidoctor
+:idprefix:
+:numbered:
+:imagesdir: images
+:experimental:
 :toc: preamble
-//:toc-title: pass:[<h3>Contents</h3>]
+:toc-title: pass:[<h3>Contents</h3>]
+ifdef::env-github[]
+:note-caption: :information_source:
+:tip-caption: :bulb:
+endif::[]
 
 The example of a dockerized Kafka Streams application using docker-compose. It runs  https://kafka.apache.org/25/documentation/streams/developer-guide/dsl-api.html[the WordCount demo application] that is included in the Apache Kafka documentation.
 
@@ -14,34 +23,43 @@ The example of a dockerized Kafka Streams application using docker-compose. It r
 
 . Execute command
 
+[source,text]
 ----
 sbt docker
 ----
 . In the docker folder, open the terminal and execute the command
-[source, text]
+
+[source,text]
 ----
 docker-compose up -d
 ----
 . If you want to produce input messages, after 3 minutes from starting the application execute the command:
-[source, text]
+
+[source,text]
 ----
 docker-compose exec broker kafka-console-producer --topic text-topic --bootstrap-server localhost:9092
 ----
 . If you want to consume output messages, execute the command:
-[source, text]
+
+[source,text]
 ----
 docker-compose exec broker kafka-console-consumer --topic count-topic --from-beginning --bootstrap-server localhost:9092
 ----
 . To shut down docker application, execute the command:
-[source, text]
+
+[source,text]
 ----
 docker-compose down
 ----
+
 == FAQ
 
 . If the service damian-app crushes, execute the command:
-[source, text]
+
+[source,text]
 ----
 docker-compose run damian-app
 ----
+
+TIP: Check if Kafka Broker and Zookeeper are running
 
